# ruidmap

./: CHANGELOG.md  LICENSE  README.md  ROADMAP.MD  TODO.md
.github/workflows/: release.yml
roadmap-tui/: Cargo.toml  roadmap.json
roadmap-tui/src/: app.rs  main.rs  models.rs  storage.rs  ui.rs
ruidmap-desktop/: .gitignore  CHANGELOG.md  package-lock.json  package.json  roadmap.json  tailwind.config.js
ruidmap-desktop/src/: App.css  App.tsx  main.tsx
ruidmap-desktop/src-tauri/: Cargo.toml  roadmap.json  tauri.conf.json
ruidmap-desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  storage.rs
ruidmap-desktop/src/components/: AsciiArtBanner.tsx  CommentSection.tsx  DataManagement.tsx  DueDatePicker.tsx  ProjectManagementDialog.tsx  ProjectSelector.tsx  StatusBar.tsx  SubtaskManager.tsx  TagManager.tsx  TaskDetail.tsx  TaskList.tsx  TimeTracker.tsx
ruidmap-desktop/src/components/dashboard/: Analytics.tsx  DashboardLayout.tsx  Widget.tsx  index.ts
ruidmap-desktop/src/components/ui/: AnimatedButton.tsx  AnimatedCard.tsx  ContextMenu.tsx  DragDrop.tsx  FloatingActionButton.tsx  KeyboardShortcuts.tsx  (+8 more)
ruidmap-desktop/src/hooks/: useProjectManagement.ts  useSearch.ts  useTasks-mock.ts  useTasks.ts
ruidmap-desktop/src/providers/: AccessibilityProvider.tsx  DragDropProvider.tsx  NotificationProvider.tsx  ResponsiveProvider.tsx
ruidmap-desktop/src/stores/: ThemeProvider.tsx
ruidmap-desktop/src/theme/: themes.ts
ruidmap-desktop/src/types/: index.ts
ruidmap-desktop/src/utils/: accessibility.tsx  animations.ts  performance.tsx  responsive.tsx
